src/App.css
/* ... */
.footer {
  color: light-dark(#202020, #fff);
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 60px;
  padding: 1rem 2rem;
  border-top: 4px solid #eee;
}

.acknowledgements {
  width: 30%;
  font-size: 15px;
  font-weight: 500;
  line-height: 24px;
  color: light-dark(#202020, #fff);
  /* border-top: 4px solid #00ace1;
  padding-top: 1rem; */
}

.shiftLabel {
  font-weight: 500;
  margin: 0rem 0 1rem 3rem;
  background-color: light-dark(#fff, #242424);
  font-size: x-small;
  text-align: center;
}

.company {
  font-size: 15px;
  font-weight: 500;
  line-height: 24px;
  color: light-dark(#202020, #fff);
}

.website {
  display: flex;
  align-items: center;
  gap: 12px;
  margin-bottom: 0.5rem;
}

.contactsLink {
  color: light-dark(#202020, #fff) !important;
}

.contactsLink:hover {
  color: light-dark(#535353, #fff) !important;
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.search-filters-wrap {
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: light-dark(#fff, #242424);
}

.search-filters {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 6px;
  flex-wrap: wrap;
}

.search-filters-item p {
  margin: 0;
}

.search-filters-item {
  display: flex;
  align-items: center;
  gap: 8px;
  border: #c2f2ff 1px solid;
  background-color: #f8fdff;
  /* background-color: light-dark(#f8fdff, #6d6d6d); */

  width: fit-content;
  border-radius: 4px;
  padding: 0 10px 0 2px;
  /* cursor: pointer; */
}
.search-filters-item:hover {
  border: #63ddff 1px solid;
  background-color: #effcff;
  transition-duration: 300ms;
}

.backArrow {
  border: 1px solid #00ace1;
  color: #00ace1;
  border-radius: 6px;
  width: fit-content;
  padding: 0 0.6rem;
  cursor: pointer;
  font-weight: 700;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 12px;
  height: 40px;
  margin-bottom: 1rem;
  fill: #00ace1;
}
.backArrow:hover {
  color: #fff;
  background-color: #00ace1;
  border: 1px solid #00ace1;
  transition: all 0.2s;
  fill: #fff;
}

/* .backArrow svg {
  fill: #00ace1;
} */

.domainInfoTitle {
  display: flex;
  justify-content: flex-start;
  align-items: baseline;
  gap: 6px;
}

.exploreH5web {
  background-color: light-dark(#ecffd5, #d8ffb3);
  color: #454545;
  height: 14px;
  font-size: smaller;
  font-weight: 600;

  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 6px;
  border: 1px solid #a8ff32;
}

.exploreH5web:hover {
  border-color: #6eca44;
  transition: all 0.2s;
}
.exploreH5web:focus {
  outline: none;
}

.viewMode {
  height: 30px;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.viewMode:hover {
  background-color: aliceblue;
  border-radius: 4px;
  transition: all 0.2s;
}

.userInfo {
  display: flex;
  align-items: center;
  gap: 8px;
}
.loginWelcom {
  font-size: 0.9rem;
  font-weight: 400;
}

.closeBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  width: 24px;
  height: 24px;
  border-radius: 50%;
}
.closeBtn:hover {
  background-color: rgb(238, 238, 238);
  outline: none;
}

.closeBtn:focus {
  outline: none;
}

